--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>index</title>
-<link href="/css/Project.css" rel="stylesheet" type="text/css">
+<link href="css/Project.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
